--- a/public/web/main_page.html
+++ b/public/web/main_page.html
@@ -17,27 +17,28 @@
         }
         header {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-between; 
             align-items: center;
-            padding: 20px 0;
+            padding: 10px 0; 
             background-color: black;
             color: white;
         }
         .logo {
-            text-align: left;
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
+            width:200px;
+            height: auto;
+        }
+        nav {
+            flex: 1px;
+            text-align: center;
+            margin-right: 180px;
         }
         nav ul {
+            display: inline-flex;
             list-style: none;
-            margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: flex-end;
         }
         nav ul li {
-            margin-left: 20px;
+            margin: 0 15px;
         }
         nav ul li a {
             text-decoration: none;
@@ -178,7 +179,7 @@
 
 <div class="container">
     <header>
-        <div class="logo">XYZ CANADA LOGO</div>
+        <img src="/images/xyz.png" class="logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -220,11 +221,11 @@
         <h3>Get AI-Generated 3D Blueprints</h3>
         <p>Explore these resources to help you generate and customize AI-based 3D models for your next project.</p>
         <ul style="list-style: none; padding: 0;">
-            <li><a href="https://example-link1.com" style="color: #4da6ff;">AI Blueprint Generator 1</a> - Create precise and detailed 3D models using advanced AI tools.</li>
-            <li><a href="https://example-link2.com" style="color: #4da6ff;">Smart3D Designs</a> - Customize your 3D blueprints using machine learning for optimized results.</li>
-            <li><a href="https://example-link3.com" style="color: #4da6ff;">Rapid3D AI</a> - Generate functional prototypes with AI-driven design suggestions.</li>
+            <li><a href="https://www.3daistudio.com/ImageTo3D" style="color: #4da6ff;">3D AI Studio</a> - Powerful AI tools that allow you to produce 3D models from text or images</li>
+            <li><a href="https://www.meshy.ai/" style="color: #4da6ff;">Meshy</a> - Another powerful AI tool that has similar functionality to 3D AI studio.</li>
+            <li><a href="https://lumalabs.ai/genie?view=create" style="color: #4da6ff;">Genie</a> - Generate functional prototypes with AI-driven design.</li>
         </ul>
-        <p>These resources provide tools that allow you to generate and adapt 3D models efficiently, making it easier for you to achieve the designs you envision.</p>
+        <p>These resources provide tools that allow you to generate and adapt 3D models efficiently, making it easier for you to achieve the designs you envision, Or you can use our design services, you just need to provide the demand.</p>
     </div>
     
 
