--- a/public/web/service_page.html
+++ b/public/web/service_page.html
@@ -17,27 +17,28 @@
         }
         header {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-between; 
             align-items: center;
-            padding: 20px 0;
+            padding: 10px 0; 
             background-color: black;
             color: white;
         }
         .logo {
-            text-align: left;
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
+            width:200px;
+            height: auto;
+        }
+        nav {
+            flex: 1px;
+            text-align: center;
+            margin-right: 180px;
         }
         nav ul {
+            display: inline-flex;
             list-style: none;
-            margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: flex-end;
         }
         nav ul li {
-            margin-left: 20px;
+            margin: 0 15px;
         }
         nav ul li a {
             text-decoration: none;
@@ -45,8 +46,6 @@
             font-size: 16px;
             font-weight: bold;
         }
-
-
         .capabilities-section {
             padding: 40px 0;
             text-align: center;
@@ -122,7 +121,7 @@
 
 <div class="container">
     <header>
-        <div class="logo">XYZ CANADA LOGO</div>
+        <img src="/images/xyz.png" class="logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
