--- a/public/web/contact_page.html
+++ b/public/web/contact_page.html
@@ -73,7 +73,7 @@
             <p style="text-align: left;">Thank you for visiting XYZ Canada 3D Printing. If you have any questions, please feel free to reach out to us!</p>
             <p style="text-align: left;">
                 <strong>Email:</strong> Radiant3dprinting@gmail.com<br>
-                <strong>Phone Number:</strong> (519)-466-3172
+                <strong>Phone Number:</strong> (xxx)-xxx-xxxx
             </p>
             <div class="contact-form" style="display: flex; justify-content: space-between; gap: 20px; flex-wrap: wrap;">
                 <div style="flex-basis: 48%;">
