--- a/public/web/about_page.html
+++ b/public/web/about_page.html
@@ -5,41 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XYZ Canada 3D Printing</title>
     <style>
+        /* Set body background to white */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: black;
+            background-color: white;
         }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
+
+        /* Full-width black header */
         header {
-            display: flex;
-            justify-content: space-between; 
-            align-items: center;
-            padding: 10px 0; 
             background-color: black;
             color: white;
+            padding: 10px 0;
+            width: 100%;
         }
+
+        .header-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         .logo {
-            width:200px;
+            width: 200px;
             height: auto;
         }
-        nav {
-            flex: 1px;
-            text-align: center;
-            margin-right: 180px;
-        }
+
         nav ul {
             display: inline-flex;
             list-style: none;
             padding: 0;
         }
+
         nav ul li {
             margin: 0 15px;
         }
+
         nav ul li a {
             text-decoration: none;
             color: white;
@@ -47,15 +51,55 @@
             font-weight: bold;
         }
 
+        /* Center main content with max-width */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
+        /* About section styling */
+        .about-section {
+            display: flex;
+            align-items: center;
+            padding: 40px 0;
+            background-color: #f5f5f5; /* Light gray background for consistency */
+        }
 
+        .about-image {
+            flex: 1;
+            padding: 20px;
+        }
+
+        .about-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        .about-text {
+            flex: 2;
+            padding: 20px;
+            color: black;
+        }
+
+        .about-text h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        .about-text p {
+            font-size: 16px;
+            color: #555;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <header>
-        <img src="/images/xyz.png" class="logo">
+<header>
+    <div class="header-container">
+        <img src="/images/xyz.png" class="logo" alt="XYZ Canada Logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -65,21 +109,19 @@
                 <li><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
 
-    <div class="about-section" style="display: flex; align-items: center; padding: 40px 0; background-color: #f0f0f0;">
-        <div class="about-image" style="flex: 1; padding: 20px;">
-            <img src="/images/1231234.png" alt="Founder Image" style="width: 100%; height: auto; border-radius: 8px;">
+<div class="container">
+    <div class="about-section">
+        <div class="about-image">
+            <img src="/images/1231234.png" alt="Founder Image">
         </div>
-        <div class="about-text" style="flex: 2; padding: 20px;">
+        <div class="about-text">
             <h2>About XYZ Canada</h2>
-            <p>XYZ Canada was founded in the fall of 2024 with the goal of providing affordable and local 3D printing and design work. After our founding, we have grown and expanded our capabilities and machines to provide the latest in printing technology. Through our service, we hope that anyone can use 3D printing to improve their life, whether you want to have a novel cup or have unique and high-quality needs in prostheticsThrough our service, we hope that anyone can use 3D printing to improve their life, whether you want to have a novel cup or have unique and high-quality needs in prosthetics. </p>
+            <p>XYZ Canada was founded in the fall of 2024 with the goal of providing affordable and local 3D printing and design work. Since our founding, we have grown and expanded our capabilities and machines to provide the latest in printing technology. Through our service, we hope that anyone can use 3D printing to improve their life, whether you want to have a novel cup or have unique and high-quality needs in prosthetics.</p>
         </div>
     </div>
-    
-    
-
-
 </div>
 
 <script src="/js/about_page.js"></script>
