--- a/public/web/service_page.html
+++ b/public/web/service_page.html
@@ -11,12 +11,14 @@
             padding: 0;
             background-color: white;
         }
+
         header {
             background-color: black;
             color: white;
             padding: 10px 0;
-            width: 100vw;
+            width: 100%;
         }
+
         .header-container {
             max-width: 1200px;
             margin: 0 auto;
@@ -24,41 +26,85 @@
             justify-content: space-between;
             align-items: center;
         }
+
         .logo {
             width: 200px;
             height: auto;
         }
+
         nav ul {
-            display: inline-flex;
+            display: flex;
             list-style: none;
             padding: 0;
+            margin: 0;
         }
+
         nav ul li {
             margin: 0 15px;
         }
+
         nav ul li a {
-            text-decoration: none;
             color: white;
             font-size: 16px;
             font-weight: bold;
+            text-decoration: none;
         }
+
+        .user-icon {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .user-icon button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: white;
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            width: 150px;
+            border-radius: 4px;
+        }
+
+        .dropdown-menu a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-menu a:hover {
+            background-color: #f1f1f1;
+        }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
+
         .printing-services {
             padding: 40px 0;
             text-align: center;
             background-color: white;
             color: black;
         }
+
         .services-container {
             display: flex;
             justify-content: space-between;
             gap: 20px;
             flex-wrap: nowrap;
         }
+
         .service-card {
             background-color: #f5f5f5;
             padding: 20px;
@@ -67,30 +113,36 @@
             text-align: left;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         .service-card img {
             width: 100%;
             height: auto;
             margin-bottom: 15px;
         }
+
         .service-card h3 {
             font-size: 18px;
             margin-bottom: 10px;
         }
+
         .service-card p {
             font-size: 14px;
         }
+
         .capabilities-section {
             padding: 40px 0;
             text-align: center;
             background-color: white;
             color: black;
         }
+
         .capabilities-container {
             display: flex;
             justify-content: space-between;
             gap: 10px;
             flex-wrap: nowrap;
         }
+
         .capability-card {
             background-color: #f5f5f5;
             padding: 20px;
@@ -99,14 +151,17 @@
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         .capability-card img {
             width: 200px;
             margin-bottom: 20px;
         }
+
         .capability-card h3,
         .capability-card p {
             color: black;
         }
+
         @media (max-width: 768px) {
             .services-container,
             .capabilities-container {
@@ -115,7 +170,7 @@
 
             .service-card,
             .capability-card {
-                width: 100%; 
+                width: 100%;
             }
         }
     </style>
@@ -134,9 +189,17 @@
                 <li><a href="/contact">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="user-icon">
+            <button onclick="toggleDropdown()">
+                <img src="/images/path-to-user-icon.jpg" alt="User Icon" style="width: 40px; height: 40px;">
+            </button>
+            <div id="dropdown-menu" class="dropdown-menu">
+                <a href="/sign-in">Sign in</a>
+                <a href="/create">Create an account</a>
+            </div>
+        </div>
     </div>
 </header>
-
 
 <div class="container">
     <div class="printing-services">
@@ -202,7 +265,9 @@
     </div>
 </div>
 
-<script src="/js/service_page.js"></script>
+<script src="/js/service_page.js">
+
+</script>
 
 </body>
 </html>
